[package]
name = "adorastats-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.8"
reqwest = "0.11"
tokio = { version = "1.12", features = ["full"] }
futures = "0.3.6"
bigdecimal = "0.3"
num-bigint = "0.4"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
job_scheduler = "1.2"
async-cron-scheduler = "1.0"
chrono = "*"
smol = "*"
rand = "0.8"
serde_json = "1.0"
termion = "2.0.1"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v1",
    "std",
    "rng",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
